--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/style.css">
 </head>
 <body>
+<main role="main">
 
-  <!-- NavBar -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <!-- NavBar -->
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="https://github.com/DJAndrew-coder" target="_blank">Git Hub</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pixabay.com/photos/search/gallaxy/" target="_blank">Pixabay</a>
@@ -38,7 +39,7 @@
         </div>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="Contact Me.html">Contact Us</a>
+        <a class="nav-link" href="file:///Users/andrejjurgelevic/Documents/Bootstrap/Contact Me/index.html">Contact Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -48,12 +49,12 @@
   </div>
 </nav> 
 
+
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <!-- Bootstrap Carousel -->
-	
-<main role="main">
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
+
+<div class="containermy">
+  <div class="jumbotron">
       <div id="demo" class="carousel slide" data-ride="carousel">
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -62,24 +63,24 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="orion-nebula-11107.jpg" alt="Los Angeles" width="1100" height="400">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" alt="Los Angeles" width="2100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
-        <p>Orion Nebula!</p>
+        <p>We had such a great time in Milky Way!</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="milky-way-2695569_1280.jpg" alt="Chicago" width="1100" height="400">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/milky-way-2695569_1280.jpg" alt="Chicago" width="2100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
-        <p> Milky Way!</p>
+        <p>Thank you, Milky Way!</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="milky-way-2695569_1280.jpg" alt="New York" width="1100" height="400">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/astronomy-1867616_640.jpg" alt="New York" width="2100" height="400">
       <div class="carousel-caption">
         <h3>Galaxy</h3>
-        <p>Milky Way!</p>
+        <p>We love the Big Apple!</p>
       </div>   
     </div>
   </div>
@@ -95,57 +96,102 @@
   </div>
 </div>
 
-  <!-- Example row of columns -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="Milky Way Galaxy.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Milky Way Galaxy</h5>
-            <p class="card-text">The Galactic Center as seen from Earth's night sky (the laser creates a guide-star for the telescope).</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
-    </div>
-    <hr>
-  
- <!-- Button trigger modal -->
+
+
+  <!-- Grid Cards -->
 
   <div class="container">
-  <div class="row justify-content-end">
-    <div class="col-2">
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-        Login
-      </button>
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card">
+          <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/orion-nebula-11107.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/galaxy-11098_640.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/astronomy-1867616_640.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col mb-4">
+    <div class="card">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+    <div class="col mb-4">
+    <div class="card">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+    <div class="col mb-4">
+    <div class="card">
+      <img src="file:///Users/andrejjurgelevic/Documents/Bootstrap/img/purple-690724_1280.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
     </div>
   </div>
 </div>
+</div>
+    <hr>
+  
+ <!-- Button modal For Login-->
+  <div class="container">
+    <div class="button">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+          Login
+        </button>
+    </div>
+   <!--  Modal button for Sign Up Form -->
+   <div class="button">
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Sign Up</button>
+    </div>
 
-<!-- Modal -->
+  </div>
 
+<!-- Modal For Login -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-         <form class="was-validated" ">
+         <form action=""  class="was-validated" method="post">
           <div class="form-group">
             <label for="uname">Username:</label>
             <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
@@ -171,12 +217,87 @@
     </div>
   </div>
 </div> 
-</div> <!-- /container -->
+
+  
+
+<!-- Modal Fo Sign Up -->
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+        <form class="MyForm">
+          <div class="form-row">
+            <div class="col-md-4 mb-3">
+              <label for="validationDefault01">First name</label>
+              <input type="text" class="form-control" id="validationDefault01" value="First name" required>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="validationDefault02">Last name</label>
+              <input type="text" class="form-control" id="validationDefault02" value="Last name" required>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="validationDefaultUsername">Username</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                </div>
+                <input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2" required>
+              </div>
+            </div>
+          </div>
+
+          <!-- Next Row -->
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label for="validationDefault03">City</label>
+              <input type="text" class="form-control" id="validationDefault03" required>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationDefault04">State</label>
+              <select class="custom-select" id="validationDefault04" required>
+                <option selected disabled value="">Choose...</option>
+                <option>
+                  Lithuania
+                </option>
+              </select>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationDefault05">Zip</label>
+              <input type="text" class="form-control" id="validationDefault05" required>
+            </div>
+          </div>
+
+          <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" required>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" required>
+            </div>
+          </div>
+
+
+          <div class="form-group">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+              <label class="form-check-label" for="invalidCheck2">
+                Agree to terms and conditions
+              </label>
+            </div>
+          </div>
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </form>
+    </div>
+  </div>
+</div>
+      
+
 </main>
-	
 <footer class="container">
   <p>&copy; A. J. Company 2020</p>
 </footer>
+
 
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
