--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
   </div>
     <div class="col mb-4">
     <div class="card">
-      <img src="purple-690724_1280.jpg" class="card-img-top" alt="...">
+      <img src="galaxy-3608029_1280.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Purple</h5>
+        <h5 class="card-title">Galaxy</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
