--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- NavBar -->
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="https://github.com/DJAndrew-coder" target="_blank">Git Hub</a>
+    <a class="navbar-brand" href="#" target="_blank">Git Hub</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
   </button>
